# openntpd-portable-1

./: Dockerfile  Makefile.am  build.sh  cifuzz.yaml  coverage.sh  fuzz_harness.cpp  fuzz_harness_external.cpp  fuzz_harness_internal.cpp  ntpd.conf  run.sh  stubs.c  test.sh  update.sh
.code-intelligence/: README.md  build.sh  ntp.c  ntp_dns.c  ntpd.c  project.yaml  server.c  util.c
.code-intelligence/fuzz_targets/: parse_config_fuzzer.cpp  parse_config_fuzzer.cpp.yaml  udp_fuzzer.cpp  udp_fuzzer.cpp.socket.json  udp_fuzzer.cpp.yaml  useless_fuzz_target.cpp  useless_fuzz_target.yaml
docker/: Dockerfile  ntpd.conf
libfuzzer_no_main/: main_hook.cpp  main_hook.h
patches/: 0021-remove-daemonization-fuzz-blocker.patch  0022-clamp-out-of-range-floats.patch  0022-enable-internal-fuzzing.patch  ntpd.c
